# mensageiro

./: Cargo.toml
docker/: Dockerfile  docker-compose.yml
src/: lib.rs  log_util.rs  main.rs  tests_util.rs
src/core/: mod.rs
src/server/: mod.rs  spec.rs
tests/: mensageiro_test.rs  messageiro_test.rs  wave_test.rs
